[package]
name = "elden_boc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
soup = { version = "0.5.1" }
xdg = { version = "2.5.0" }
lazy_static = { version = "1.4.0" }
